# esm-checker

./: .cursorignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DEBUGGING.md  Dockerfile  README.md  clippy.toml  fly.toml
.github/workflows/: CI.yml
crates/es_resolver/: Cargo.toml
crates/es_resolver/src/: errors.rs  lib.rs  presets.rs  resolve_chain.rs  resolve_chain_container.rs  tests.rs  utils.rs
crates/es_resolver/src/package_json/: mod.rs  parser.rs  types.rs
crates/es_resolver/src/resolvers/: exports_resolver.rs  file_resolver.rs  files_resolver.rs  handle_optional_peer_dependencies.rs  index_resolver.rs  mod.rs  package_json_resolver.rs  pseudo_namespace_resolver.rs  relative_path_resolver.rs
crates/esm_checker_bindings/: Cargo.toml  README.md  bin.js  package.json
crates/esm_checker_bindings/__test__/: index.test.mjs
crates/esm_checker_bindings/npm/darwin-arm64/: package.json
crates/esm_checker_bindings/npm/darwin-x64/: package.json
crates/esm_checker_bindings/npm/linux-x64-gnu/: package.json
crates/esm_checker_bindings/npm/win32-x64-msvc/: README.md  package.json
crates/esm_checker_bindings/src/: lib.rs
crates/fetch_and_report/: Cargo.toml
crates/fetch_and_report/src/: lib.rs  main.rs
crates/is_esm_ready_yet/: Cargo.toml
crates/is_esm_ready_yet/src/: generate_report.rs  lib.rs  main.rs  pkg_json.rs
crates/napi_esm/: .pnp.cjs  Cargo.toml  bin.js  index.d.ts  index.js  is-esm-ready-yet.darwin-arm64.node  package-lock.json  package.json
crates/napi_esm/__test__/: index.spec.mjs  index.test.mjs
crates/napi_esm/npm/darwin-arm64/: README.md  package.json
crates/napi_esm/npm/darwin-x64/: README.md  package.json
crates/napi_esm/npm/linux-x64-gnu/: README.md  package.json
crates/napi_esm/npm/win32-x64-msvc/: package.json
crates/napi_esm/src/: lib.rs
crates/report_model/: Cargo.toml
crates/report_model/src/: lib.rs
crates/reporter/: Cargo.toml
crates/reporter/src/: generate_report.rs  main.rs  pkg_json.rs
crates/walk_imports/: Cargo.toml
crates/walk_imports/src/: lib.rs
crates/walk_imports/src/analyze/: analyze_package.rs  has_cjs_syntax.rs  mod.rs  parse.rs  test.rs  types.rs  walk.rs
crates/walk_imports/src/report/: into_report.rs  mod.rs  test.rs  types.rs
crates/web_server/: Cargo.toml
crates/web_server/src/: main.rs
crates/web_server/static/: index.html
npm-package/: README.md  package.json
test_repo/: package-lock.json  package.json  test.js
