[package]
name = "esm_checker_bindings"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

[lib]
crate-type = ["cdylib"]

[dependencies]
reporter = { path = "../reporter" }
report_model = { path = "../report_model" }
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"

[build-dependencies]
napi-build = "2.0.1"
