[package]
name = "fetch_and_report"
version = "0.1.0"
edition = "2021"

[dependencies]
reporter = { path = "../reporter" }
report_model = { path = "../report_model" }
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
