[package]
name = "is_esm_ready_yet"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
es_resolver = { path = "../es_resolver" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.7.0"
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
walk_imports = { path = "../walk_imports" }
pretty_assertions = "1.3.0"
