[package]
name = "walk_imports"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
log = "0.4.17"
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
swc_core = { version = "0.69.30", features = ["ecma_loader_node", "common", "common_tty", "ecma_parser", "ecma_visit_path", "ecma_ast"] }
swc_ecma_dep_graph = "0.102.2"
es_resolver = { path = "../es_resolver" }
pretty_assertions = "1.3.0"
thiserror = "1.0.44"

